# oulad-case

./: .env.example  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  logging_config.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: logging.yml
config/ddl/: 00_create_oulad.sql
config/dml/: full_domain_oulad.sql
notebooks/: 00_eda_overview.ipynb
src/oulad_etl/: cli.py  log.py  settings.py
src/oulad_etl/db/: models.py  session.py
src/oulad_etl/eda/: summary.py
src/oulad_etl/etl/: ddl_loader.py  download.py  extract.py  load.py  models.py  summary.py  transform.py  utils.py
tests/: test_bulk_insert.py
