[tool.poetry]
name = "oulad-case"
version = "0.1.0"
description = ""
authors = ["Manuel Garcia <31109774+Mandroide@users.noreply.github.com>"]
packages = [{ include = "oulad_etl", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2"
numpy = "^2.0"
pyarrow = "^20.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
pymysql = "^1.1"                    # MySQL driver for SQLAlchemy
pydantic = "^2.7"
python-dotenv = "^1.0"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
jupyter = "*"
pytest = "^8.2"
pytest-cov = "^5.0"
black = "^24.4"
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.7"
detect-secrets = "^1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
